--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,16 @@
 		</dependency>
 		
 		<dependency>
+	   		<groupId>org.springframework.boot</groupId>
+	   		<artifactId>spring-boot-starter-data-mongodb</artifactId>
+ 		</dependency>
+ 		
+ 		<dependency>
+	   		<groupId>org.springframework.boot</groupId>
+	   		<artifactId>spring-boot-starter-thymeleaf</artifactId>
+ 		</dependency>
+		
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
